# testrepo

./: README.md  pyproject.toml
testrepo/: funcs.py
