[tool.poetry]
name = "testrepo"
version = "0.1.0"
description = "A test repo."
authors = ["Lalit Ponnala <lalit.p@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.5.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
